# iiot_data_secure

./: CMakeLists.txt  package.xml
launch/: blockchainization_agent.launch  objective_composer.launch  observer.launch  sensor.launch  server.launch  three_sensors.launch
msg/: Operation.msg  OperationData.msg
scripts/: blockchainization_agent_node  blockchainization_node.py  journal_node  journal_node.py  objective_composer_node  objective_composer_node.py  sensor_node  sensor_node.py  server_node  server_node.py
srv/: .SetSensorData.srv.swp  GetJournals.srv  GetSensorData.srv  GetSensorsList.srv  ProcOperation.srv  SetSensorData.srv
